--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Install xvfb for testing extension with headed mode
+        run: sudo apt-get install xvfb
 
       - name: Install Playwright browsers
         run: npx playwright install
 
       - name: Execute tests
-        run: npx playwright test --headed
+        run: xvfb-run --auto-servernum npx playwright test
